--- a/src/marine.css
+++ b/src/marine.css
@@ -110,11 +110,14 @@ textarea, input {
 }
 
 /* The background color for pronunciation-specific text input fields blends into the background color. */
-input[class=pronunciation] {
-    background-color: inherit;
+input[class=pronunciation],
+textarea[class=pronunciation] {
+    background-color: transparent;
 }
+
 /* Style used for pronunciation-specific text input fields on mouse hover. */
-input[class=pronunciation]:hover {
+input[class=pronunciation]:hover,
+textarea[class=pronunciation]:hover {
     background-color: rgb(129, 161, 167);
 }
 
